--- a/pf4j-spring/pom.xml
+++ b/pf4j-spring/pom.xml
@@ -24,13 +24,13 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
+            <version>RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
+            <version>RELEASE</version>
         </dependency>
 
         <!-- Logs -->
